--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body{
     display: flex;
     flex-direction: column;
     margin: 0;
-    width: 100%;
+    min-width: 1200px;
     height: 100vh;
     background: rgb(216, 215, 215);
     justify-content: center;
@@ -70,7 +70,8 @@ html, body{
     display: flex;
     position: relative;
     margin-top: 10px;
-    min-width: 600px;
+    width: 600px;
+    
     height: 100px;
     justify-content: space-between;
     align-items: center;
