--- a/style.css
+++ b/style.css
@@ -90,8 +90,9 @@ html, body{
 }
 
 .pictures:hover{
-    height: 80px;
-    width: 80px;
+    height: 100px;
+    width: 100px;
+    box-shadow: none;
 }
 
 .megjegyzes{
@@ -111,4 +112,5 @@ html, body{
 .active{
     height: 100px;
     width: 100px;
+    box-shadow: none;
 }
